tests/e2e/errors/runtime_operand.lox
var a = -"not a number"; // expect runtime error: Operand must be a number.
